# ReceiptScanner-V2

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
ocr_logs/: Lowes_processed.txt  Sephora_processed.txt  Untitled_processed.txt  fake_processed.txt
src/marymount/: __init__.py
src/marymount/edu/: __init__.py
src/marymount/edu/receiptscanner/: __init__.py  config.py  models.py
src/marymount/edu/receiptscanner/controllers/: receipts.py
src/marymount/edu/receiptscanner/services/: export_service.py  ocr_service.py  parser_service.py  preprocessing_service.py  receipt_pipeline.py  storage_service.py  summary_service.py  validation_service.py
src/marymount/edu/receiptscanner/static/css/: style.css
src/marymount/edu/receiptscanner/templates/: base.html  index.html
src/marymount/edu/receiptscanner/templates/errors/: 404.html
src/marymount/edu/receiptscanner/templates/receipts/: edit.html
src/marymount/edu/receiptscanner/utils/: paths.py
tests/: test_parser.py  test_validation.py
tests/STD testing/Suite 05/: output.csv
